# used for installing dependencies for all programs at once
[workspace] 
members = [
    "programs/*"
]
resolver = "2"

[patch.crates-io]
constant_time_eq = { path = ".cargo-override/constant_time_eq-0.4.2" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
